  - OrbitGraph for Orb
  - IsGradedOrbit
  - New fast methods for AsList, Enumerator and ConstantTimeAccessList
  - Method for Iterator for Orb orbits
  - Kernel method for PermLeftQuoTransformationNC_C
  - Kernel method for MappingPermSetSetNC_C
  - Allow a different operation in FindSuborbits
  - Kernel method for MappingPermListListNC_C
  - Provide ORB_HashFunctionForPlainFlatList


==========================
 Changes from 3.3 -> 3.4:
==========================

  - Fixed a bug in the gap4r4 compatibility file in SlotUsagePattern.
  - Switch off accus in initialisation phase because there is no point.


==========================
 Changes from 3.2 -> 3.3:
==========================

  - Fixed a bug in ProductReplacer


==========================
 Changes from 3.1 -> 3.2:
==========================

  - Fixed incompatibility with fr package, FLOATs again!


==========================
 Changes from 3.0 -> 3.1:
==========================

  - Fixed bug in HTAdd (calling AddHT).
  - Major reorganisation of product replacers (accelerator, multiple accus)
  - AddGeneratorToProductReplacer new
  - added AVLIndexFind
  - allow automatic growing of tree hash tables
  - change fallback for ChooseHashFunction to return 1 function


==========================
 Changes from 2.0 -> 3.0:
==========================

  - Fixed some bugs for hash functions for compressed vectors/matrices.
  - Fixed a bug in the depth and depthmarks of orbits
  - Improved MakeSchreierTreeShallow for great depths
  - New implementation of AVL trees.
  - C-part to speed up AVL trees and hash tables.
  - New interface to hash functionality.
  - New tree hash tables.
  - C-port to speed up tree hash tables.
  - New generic hash function in particular for compressed vectors/mats.
  - ORB_EstimateOrbitSize using birthday paradox.
  - Fix normalin component for product replacer objects.
  - Various fixes and improvements of orbit-by-suborbit stuff.
  - New HISTORY file for release history.

