@@ -14,7 +14,9 @@
 #############################################################################
 
 DeclareGlobalFunction( "ImageAndKernelOfTransformation" );
-
+DeclareOperation( "PermLeftQuoTransformationNC", 
+  [ IsTransformation, IsTransformation ]);
+DeclareGlobalFunction( "MappingPermSetSet" );
 ##
 ##  This program is free software: you can redistribute it and/or modify
 ##  it under the terms of the GNU General Public License as published by
