@@ -20,6 +20,7 @@
   - Allow a different operation in FindSuborbits
   - Kernel method for MappingPermListListNC_C
   - Provide ORB_HashFunctionForPlainFlatList
+  - Kernel method for ImageSetOfTransformation and KernelOfTransformation
 
 
 ==========================
